# brainfuck

./: .gitignore  BrainfuckCompiler.hs  BrainfuckCompilerLLVM.hs  BrainfuckInterpreter.hs  LICENSE  README.md  RegisterToBrainfuck.hs  brainfuck-compiler.cabal
Language/BrainFuck/: Interpreter.hs  Parser.hs  Syntax.hs
Language/Brainfuck/: CompileToIA32.hs  Interpreter.hs  Pretty.hs
Language/Brainfuck/Interpreter/: IO.hs
Language/IA32/: Pretty.hs  Syntax.hs
Language/Ia32/: Syntax.hs
Language/Loop/: CompileToBrainfuck.hs  Syntax.hs
Language/RegisterMachine/: CompileToLoop.hs  Parser.hs  ResolveLabels.hs  Syntax.hs
Language/RegisterMachine/CompileToLoop/: Labeller.hs  Partitions.hs
Language/RegisterMachine/Syntax/: Macros.hs
language-brainfuck/: language-brainfuck.cabal
language-brainfuck/src/: BrainfuckCompiler.hs  BrainfuckCompilerLLVM.hs  BrainfuckInterpreter.hs
language-brainfuck/src/Language/Brainfuck/: CompileToIA32.hs  Interpreter.hs  Parser.hs
language-brainfuck/src/Language/Brainfuck/Interpreter/: IO.hs
language-brainfuck/src/Language/IA32/: Syntax.hs
language-movdbz/src/Language/MovDBz/: FromBrainfuck.hs  Interpreter.hs  Syntax.hs
language-movdbz/src/Language/MovDBz/FromBrainfuck/: Example.hs
language-registermachine/: language-registermachine.cabal
language-registermachine/src/Language/Loop/: Syntax.hs
language-registermachine/src/Language/RegisterMachine/: Assembler.hs  CompileToLoop.hs  Parser.hs  ResolveLabels.hs  Syntax.hs
language-registermachine/src/Language/RegisterMachine/CompileToLoop/: Partitions.hs
language-registermachine/src/Language/RegisterMachine/Syntax/: Macros.hs
samples/: 9digit-regs.txt  9digits-rm.regm  9digits-rm.rm  9digits.bf  powers-of-two.bf  rot13.bf
src/: BrainfuckCompiler.hs  BrainfuckInterpreter.hs
src/Language/Brainfuck/: Parser.hs  Pretty.hs  Syntax.hs
src/Language/IA32/: Pretty.hs
src/Language/RegisterMachine/: CompileToLoop.hs  Parser.hs  Syntax.hs
src/Language/RegisterMachine/CompileToLoop/: Partitions.hs
src/Language/RegisterMachine/Syntax/: Macros.hs
